2004-02-29  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* Makefile.in (install-ftp, site-lisp): Remove unused targets.

	Version 2.0.39 released.

2004-02-29  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (top-level): Require password.el if visible.  Should be
	mandatory once No Gnus has found its way into (X)Emacs.
	(tramp-read-passwd): Invoke `password-read' if available,
	`read-passwd' otherwise. `ange-ftp-read-passwd' isn't used as
	fallback any longer.
	(tramp-clear-passwd): New function.
	(tramp-process-actions, tramp-process-multi-actions): Clear
	password cache if login has failed.

	* tramp-smb.el (tramp-smb-open-connection): Clear password cache
	if login has failed.

2004-02-23  Kai Grossjohann  <kai@emptydomain.de>

	* tramp.el (tramp-handle-write-region): Say which function is used
	when encoding.

2004-02-16  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-async-proc): New variable.
	(tramp-handle-shell-command): Adding asynchronous processes.  They
	are far from being perfect, but it works at least for
	`find-grep-dired' and `find-name-dired' in Emacs 21.4.

2004-02-09  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-handle-dired-compress-file): Added XEmacs
	implementation.
	(tramp-handle-dired-compress-file-for-emacs)
	(tramp-handle-dired-compress-file-for-xemacs): Not needed
	anymore.  Implementation not so different as expected.

2004-02-08  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp.el (tramp-file-name-handler-alist): Add
	`dired-compress-file' entry.
	(tramp-handle-dired-compress-file)
	(tramp-handle-dired-compress-file-for-emacs)
	(tramp-handle-dired-compress-file-for-xemacs): New functions.
	`tramp-handle-dired-compress-file-for-xemacs' not implemented yet.

2004-01-24  Michael Albinus  <Michael.Albinus@alcatel.de>

	* tramp-ftp.el (tramp-ftp-file-name-handler): Unset
	`ange-ftp-ftp-name-arg' and `ange-ftp-ftp-name-res'.  There could