@@ -1,2 +1,3 @@
 Makefile
+semantic.cache
 trampver.el
